# helios-telegps-telemetry

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  config.json  direwolf.conf  entrypoint.sh  pyproject.toml  run.sh
falcon-protos/: HelloWorldPacket.options  HelloWorldPacket.proto  README.md  TelemetryPacket.proto
helios-python-sdk/: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
helios-python-sdk/helios-protos/: README.md
helios-python-sdk/helios-protos/config/: component.proto
helios-python-sdk/helios-protos/transport/: protocol.proto
helios-python-sdk/scripts/: hatch_build.py
helios-python-sdk/src/helios/: __init__.py  client.py  errors.py  request.py  subscription.py  transport.py
src/: main.py
src/decoder/: csv_logger.py  formatting.py  kiss_reader.py  packet.py  serial_reader.py
