[build-system]
requires = ["hatchling", "betterproto2-compiler>=0.9.0", "grpcio-tools"]
build-backend = "hatchling.build"

[project]
name = "helios-python-sdk"
version = "0.1.0"
description = "Python SDK for Helios"
requires-python = ">=3.10"
dependencies = [
    "betterproto2[all]>=0.9.1",
    "websockets>=15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/helios"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.editable.hooks.custom]
path = "scripts/hatch_build.py"